--- a/themes/thebinarytruth/layout/base.pug
+++ b/themes/thebinarytruth/layout/base.pug
@@ -1,14 +1,13 @@
 doctype html
-html(lang='todo')
+html(lang='en')
    head
       meta(charset='utf-8')
       meta(http-equiv='X-UA-Compatible', content='IE=edge')
-      title todo
-      meta(name='description', content='todo')
+      title The Binary Truth
+      meta(name='description', content='The Binary Truth')
       meta(name='viewport', content='width=device-width, initial-scale=1')
 
       link(rel='stylesheet', href='styles/styles.css')
-      //- link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic')
 
    body
       block content
