--- a/themes/default/source/styles/_variables.styl
+++ b/themes/default/source/styles/_variables.styl
@@ -3,7 +3,7 @@ text-plus = '(min-width: 980px)'
 big-text = '(min-width: 40em)'
 
 // typography
-body-font = 'Druk Text'
+body-font = 'Druk Text Web'
 mono-font = 'Inconsolata'
 heading-font = 'Gentium Basic'
 max-text-width = 47rem
