--- a/themes/default/layout/base.pug
+++ b/themes/default/layout/base.pug
@@ -6,7 +6,7 @@ html(lang='en')
       title The Binary Truth
       meta(name='description', content='The Binary Truth')
       meta(name='viewport', content='width=device-width, initial-scale=1')
-
+      link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Inconsolata:700&display=swap')
       link(rel='stylesheet', href='styles/styles.css')
 
    body
